--- a/stylesheet.css
+++ b/stylesheet.css
@@ -62,17 +62,52 @@ body main {
   display: inline-block;
   border-radius: 2px;
 }
-#search-bar {
-  width: 590px;
-  height: 50px;
-  border-radius: 500px;
-  border-color: rgb(243, 242, 237);
-}
 p {
   font: 13px arial, sans-serif;
 }
 .footer {
   display: flex;
   flex-direction: row-reverse;
-  justify-content: space-between
+  justify-content: space-between;
+}
+footer {
+  margin-top: 230px;
+}
+#text-footer {
+  font: 14px arial, sans-serif;
+}
+input{
+  border: none;
+  padding: 10px;
+  margin: 10px;
+  height: 50px;
+  width: 590px;
+  border:1px solid #eaeaea;
+  outline:none;
+  border-radius: 500px;
+}
+input:hover{
+  border-color: #a0a0a0 #b9b9b9 #b9b9b9 #b9b9b9;
+}
+input:focus{
+  border-color:#4d90fe;
+}
+
+input[type="submit"] {
+  background: #f2f2f2;
+  border: 1px solid #f2f2f2;
+  color: #757575;
+  cursor: default;
+  font-size: 14px;
+  font-weight: bold;
+  width: 100px;
+  padding: 0 16px;
+  height:36px;
+}
+input[type="submit"]:hover {
+  box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+  background: #f8f8f8;
+  border: 1px solid #c6c6c6;
+  box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+  color: #222;
 }
